--- a/client-frontend/package.json
+++ b/client-frontend/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.11.2",
+    "@material-ui/lab": "^4.0.0-alpha.57",
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.8.3",
@@ -16,14 +17,17 @@
     "moment": "^2.29.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-emoji": "^0.5.0",
     "react-facebook-login": "^4.1.1",
     "react-file-base64": "^1.0.3",
     "react-google-login": "^5.2.2",
+    "react-google-maps": "^9.4.5",
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
+    "socket.io-client": "^4.0.1",
     "web-vitals": "^1.1.0"
   },
   "scripts": {
