--- a/server-backend/package.json
+++ b/server-backend/package.json
@@ -21,7 +21,8 @@
     "mailjet-sendemail": "^1.1.4",
     "mongoose": "^5.11.17",
     "node-fetch": "^3.0.0-beta.9",
-    "node-mailjet": "^3.3.1"
+    "node-mailjet": "^3.3.1",
+    "socket.io": "^4.0.1"
   },
   "devDependencies": {
     "concurrently": "^6.0.0",
