--- a/client-frontend/package.json
+++ b/client-frontend/package.json
@@ -12,10 +12,12 @@
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.21.1",
+    "classnames": "^2.3.1",
     "clsx": "^1.1.1",
     "js-cookie": "^2.2.1",
     "jwt-decode": "^3.1.2",
     "moment": "^2.29.1",
+    "prop-types": "^15.7.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-emoji": "^0.5.0",
