--- a/client-frontend/package.json
+++ b/client-frontend/package.json
@@ -19,12 +19,15 @@
     "moment": "^2.29.1",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
+    "react-cool-onclickoutside": "^1.6.1",
     "react-dom": "^17.0.1",
     "react-emoji": "^0.5.0",
     "react-facebook-login": "^4.1.1",
     "react-file-base64": "^1.0.3",
+    "react-google-autocomplete": "^2.1.2",
     "react-google-login": "^5.2.2",
     "react-google-maps": "^9.4.5",
+    "react-google-places-autocomplete": "^3.3.0",
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
@@ -32,6 +35,7 @@
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
     "socket.io-client": "^4.0.1",
+    "use-places-autocomplete": "^1.9.1",
     "web-vitals": "^1.1.0"
   },
   "scripts": {
