--- a/client-frontend/package.json
+++ b/client-frontend/package.json
@@ -4,10 +4,14 @@
   "private": true,
   "proxy": "http://localhost:8080",
   "dependencies": {
+    "@emotion/react": "^11.4.0",
+    "@emotion/styled": "^11.3.0",
     "@material-ui/core": "^4.11.3",
     "@material-ui/data-grid": "^4.0.0-alpha.26",
     "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.57",
+    "@material-ui/styles": "^4.11.4",
+    "@material-ui/system": "^4.11.3",
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.8.3",
@@ -19,6 +23,8 @@
     "moment": "^2.29.1",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
+    "react-chartist": "^0.14.4",
+    "react-chartjs-2": "^3.0.3",
     "react-cool-onclickoutside": "^1.6.1",
     "react-dom": "^17.0.1",
     "react-emoji": "^0.5.0",
