pagination sorting few more update

--- a/client-frontend/package.json
+++ b/client-frontend/package.json
@@ -15,11 +15,14 @@
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.8.3",
+    "autosuggest-highlight": "^3.1.1",
     "axios": "^0.21.1",
     "classnames": "^2.3.1",
     "clsx": "^1.1.1",
     "js-cookie": "^2.2.1",
     "jwt-decode": "^3.1.2",
+    "lodash": "^4.17.21",
+    "material-ui-chip-input": "^1.1.0",
     "moment": "^2.29.1",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
