--- a/server-backend/package.json
+++ b/server-backend/package.json
@@ -19,6 +19,7 @@
     "google-auth-library": "^7.0.2",
     "jsonwebtoken": "^8.5.1",
     "mailjet-sendemail": "^1.1.4",
+    "moment": "^2.29.1",
     "mongoose": "^5.11.17",
     "node-fetch": "^3.0.0-beta.9",
     "node-mailjet": "^3.3.1",
